# paddle-pdf

./: .gitignore  README.md  README_en.md  check_gpu_env.py  main.py  models.py  ocr_engine.py  package.json  pdf_pipeline.py  pixi.toml  pnpm-lock.yaml  pyproject.toml  run_ocr.bat
backend/: paddle_pdf_backend.spec
backend/hooks/: rth_paddle.py
doc/: developer.md  developer_en.md  user-guide.md  user-guide_en.md
src-frontend/: index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
src-frontend/src/: App.vue  main.ts
src-frontend/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-frontend/src-tauri/capabilities/: default.json
src-frontend/src-tauri/icons/: icon.icns
src-frontend/src-tauri/pyembed/: .gitkeep
src-frontend/src-tauri/src/: lib.rs  main.rs
src-frontend/src/assets/styles/: main.css
src-frontend/src/components/: FileDropZone.vue  GpuStatus.vue  ModelSelector.vue  TaskCard.vue  TaskProgress.vue  TextPanel.vue
src-frontend/src/composables/: useIpc.ts  useModels.ts  useTask.ts
src-frontend/src/i18n/: en.ts  index.ts  zh.ts
src-frontend/src/router/: index.ts
src-frontend/src/stores/: app.ts  settings.ts  task.ts
src-frontend/src/types/: index.ts
src-frontend/src/views/: HomeView.vue  SettingsView.vue  TaskDetailView.vue
src/paddle_pdf/: __init__.py  __main__.py
src/paddle_pdf/app/: cli_app.py  http_server.py  pytauri_app.py
src/paddle_pdf/common/: config.py  events.py  schemas.py
src/paddle_pdf/controller/: cli_controller.py  ipc_controller.py
src/paddle_pdf/core/: gpu_utils.py  models.py  ocr_engine.py  pdf_pipeline.py
src/paddle_pdf/service/: model_service.py  ocr_service.py  system_service.py  task_queue.py
