# pdf-ocr-cli project

[project]
name = "pdf-ocr-cli"
version = "1.0.0"
description = "PDF OCR CLI tool with PaddleOCR GPU/CPU support"
requires-python = ">=3.10,<3.13"
dependencies = [
    "paddlepaddle-gpu==3.3.0",
    "paddleocr>=3.5.0",
    "pymupdf>=1.25.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
pdf2txt = "main:main"

[project.optional-dependencies]
dev = ["black>=24.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
