# PaddlePDF - PDF OCR tool with GUI (pytauri)

[project]
name = "paddle-pdf"
version = "1.0.0"
description = "PDF OCR tool powered by PaddleOCR — CLI and GUI via pytauri"
requires-python = ">=3.10,<3.13"
dependencies = [
    "paddlepaddle-gpu==3.3.0",
    "paddleocr>=3.5.0",
    "pymupdf>=1.25.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "tqdm>=4.66.0",
    "pytauri>=0.4",
]

[project.scripts]
pdf2txt = "paddle_pdf.app.cli_app:main"

[project.optional-dependencies]
dev = ["black>=24.0", "ruff>=0.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paddle_pdf"]
