[package]
name = "paddle-pdf"
version = "1.0.0"
description = "PaddlePDF - PDF OCR Tool with GUI"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-pytauri = "0.4"
# pytauri with standalone feature — embeds Python interpreter
pytauri = { version = "0.4", features = ["standalone"] }
pyo3 = "0.23"
